@@ -47,8 +47,24 @@ double dbeta(double x, double a, double b, int give_log)
     if (ISNAN(x) || ISNAN(a) || ISNAN(b)) return x + a + b;
 #endif
 
-    if (a <= 0 || b <= 0) ML_ERR_return_NAN;
+    if (a < 0 || b < 0) ML_ERR_return_NAN;
     if (x < 0 || x > 1) return(R_D__0);
+
+    // limit cases for (a,b), leading to point masses
+    if(a == 0 || b == 0 || !R_FINITE(a) || !R_FINITE(b)) {
+	if(a == 0 && b == 0) { // point mass 1/2 at each of {0,1} :
+	    if (x == 0 || x == 1) return(ML_POSINF); /* else */ return(R_D__0);
+	}
+	if (a == 0 || a/b == 0) { // point mass 1 at 0
+	    if (x == 0) return(ML_POSINF); /* else */ return(R_D__0);
+	}
+	if (b == 0 || b/a == 0) { // point mass 1 at 1
+	    if (x == 1) return(ML_POSINF); /* else */ return(R_D__0);
+	}
+	// else, remaining case:  a = b = Inf : point mass 1 at 1/2
+	if (x == 0.5) return(ML_POSINF); /* else */ return(R_D__0);
+    }
+
     if (x == 0) {
 	if(a > 1) return(R_D__0);
 	if(a < 1) return(ML_POSINF);
@@ -59,11 +75,10 @@ double dbeta(double x, double a, double b, int give_log)
 	if(b < 1) return(ML_POSINF);
 	/* b == 1 : */ return(R_D_val(a));
     }
+
     double lval;
     if (a <= 2 || b <= 2)
 	lval = (a-1)*log(x) + (b-1)*log1p(-x) - lbeta(a, b);
-    else if(!R_FINITE(a) || !R_FINITE(b))
-	lval = ML_NEGINF;
     else
 	lval = log(a+b-1) + dbinom_raw(a-1, a+b-2, x, 1-x, TRUE);
 
