@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2014-05-13 r65592) -- "Unsuffered Consequences"
+R Under development (unstable) (2014-05-14 r65611) -- "Unsuffered Consequences"
 Copyright (C) 2014 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -143,6 +143,40 @@ lm2  6 336.3417
 > pbeta(x, 1, 1)
  [1] 0.00 0.05 0.10 0.15 0.20 0.25 0.30 0.35 0.40 0.45 0.50 0.55 0.60 0.65 0.70
 [16] 0.75 0.80 0.85 0.90 0.95 1.00
+> 
+> ## Visualization, including limit cases:
+> pl.beta <- function(a,b, asp = if(isLim) 1, ylim = if(isLim) c(0,1.1)) {
++   if(isLim <- a == 0 || b == 0 || a == Inf || b == Inf) {
++     eps <- 1e-10
++     x <- c(0, eps, (1:7)/16, 1/2+c(-eps,0,eps), (9:15)/16, 1-eps, 1)
++   } else {
++     x <- seq(0, 1, length = 1025)
++   }
++   fx <- cbind(dbeta(x, a,b), pbeta(x, a,b), qbeta(x, a,b))
++   f <- fx; f[fx == Inf] <- 1e100
++   matplot(x, f, ylab="", type="l", ylim=ylim, asp=asp,
++           main = sprintf("[dpq]beta(x, a=%g, b=%g)", a,b))
++   abline(0,1,     col="gray", lty=3)
++   abline(h = 0:1, col="gray", lty=3)
++   legend("top", paste0(c("d","p","q"), "beta(x, a,b)"),
++          col=1:3, lty=1:3, bty = "n")
++   invisible(cbind(x, fx))
++ }
+> pl.beta(3,1)
+> 
+> pl.beta(2, 4)
+> pl.beta(3, 7)
+> pl.beta(3, 7, asp=1)
+> 
+> pl.beta(0, 0)   ## point masses at  {0, 1}
+> 
+> pl.beta(0, 2)   ## point mass at 0 ; the same as
+> pl.beta(1, Inf)
+> 
+> pl.beta(Inf, 2) ## point mass at 1 ; the same as
+> pl.beta(3, 0)
+> 
+> pl.beta(Inf, Inf)# point mass at 1/2
 > 
 > 
 > 
